compiler/tools/fpp-check/test/top_import/undef_topology.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/top_import/undef_topology.fpp:3.10
  import A
         ^
error: symbol A is not defined
note: looking for a component instance or topology here
